--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>leGOat<title>
-</head>
+    <script src="./src/main.js" defer></script>
+  </head>
 
-
-
-<body>
-
-</body>
-
+  <body>
+    <div id="chessboard"></div>
+  </body>
 </html>
