+ placer position origine joueur

--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
     <title>Document</title>
 
     <script src="./src/main.js" defer></script>
+    <link rel="stylesheet" href="/src/style.css" />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
+    />
   </head>
 
   <body>
+    <i class="ph ph-crown"></i>
+    <i class="ph ph-crown-cross"></i>
+    <i class="ph ph-horse"></i>
+    <i class="ph ph-castle-turret"></i>
     <div id="chessboard"></div>
   </body>
 </html>
