reorganize scripts -> use a class for the horse -> move coordinates in its own file -> use import/export

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <script src="./src/main.js" defer></script>
+    <script type="module" src="./src/main.js" defer></script>
     <link rel="stylesheet" href="/src/style.css" />
 
     <link
@@ -21,10 +21,10 @@
   </head>
 
   <body>
-    <i class="ph ph-crown"></i>
+    <!-- <i class="ph ph-crown"></i>
     <i class="ph ph-crown-cross"></i>
     <i class="ph ph-horse"></i>
-    <i class="ph ph-castle-turret"></i>
+    <i class="ph ph-castle-turret"></i> -->
     <div id="chessboard"></div>
   </body>
 </html>
