--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <link rel="phosphor-icons" href="/src/assets/icons/favicon.ico" />
+
     <script type="module" src="./src/main.js" defer></script>
     <link rel="stylesheet" href="/src/style.css" />
 
